Move files to root for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Simple ERP</title>
-    <link rel="stylesheet" href="public/css/styles.css">
-    <script src="public/js/auth-guard.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/auth-guard.js"></script>
 </head>
 <body>
     <header>
@@ -19,34 +19,34 @@
         <div class="quick-actions-section" style="max-width: 600px; margin: 40px auto;">
             <h2>Main Menu</h2>
             <div class="action-buttons">
-                <a href="public/views/invoices.html" class="button button-success">
+                <a href="views/invoices.html" class="button button-success">
                     Manage Invoices
                 </a>
-                <a href="public/views/bills.html" class="button button-danger">
+                <a href="views/bills.html" class="button button-danger">
                     Manage Bills
                 </a>
-                <a href="public/views/purchase-orders.html" class="button button-warning">
+                <a href="views/purchase-orders.html" class="button button-warning">
                     Purchase Orders
                 </a>
-                <a href="public/views/customers.html" class="button button-primary">
+                <a href="views/customers.html" class="button button-primary">
                     Customers
                 </a>
-                <a href="public/views/vendors.html" class="button button-purple">
+                <a href="views/vendors.html" class="button button-purple">
                     Vendors
                 </a>
-                <a href="public/views/inventory.html" class="button button-orange">
+                <a href="views/inventory.html" class="button button-orange">
                     Products
                 </a>
-                <a href="public/views/employees.html" class="button button-info">
+                <a href="views/employees.html" class="button button-info">
                     Employees
                 </a>
-                <a href="public/views/payroll.html" class="button button-teal">
+                <a href="views/payroll.html" class="button button-teal">
                     Payroll
                 </a>
-                <a href="public/views/reports.html" class="button button-secondary">
+                <a href="views/reports.html" class="button button-secondary">
                     Reports
                 </a>
-                <a href="public/views/settings.html" class="button button-dark">
+                <a href="views/settings.html" class="button button-dark">
                     Settings
                 </a>
             </div>
@@ -59,7 +59,7 @@
         </div>
     </footer>
 
-    <script src="public/js/storage.js"></script>
-    <script src="public/js/dashboard.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
