Add UPC barcode functionality to inventory system

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Vendors
                 </a>
                 <a href="views/inventory.html" class="button button-orange">
-                    Products
+                    Inventory
                 </a>
                 <a href="views/employees.html" class="button button-info">
                     Employees
